--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,7 +4,10 @@
   "description": "http://learn.javascript.ru/screencast/nodejs",
   "main": "index.js",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "debug": "^2.6.6",
+    "winston": "^2.3.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
